With bottom sheet and bottom navigation

--- a/SecondWeek/app/src/main/AndroidManifest.xml
+++ b/SecondWeek/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SecondWeek">
         <activity
+            android:name=".FloatingButton"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
