--- a/RoomRecyclerView/app/build.gradle
+++ b/RoomRecyclerView/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     //Room
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt  "androidx.room:room-compiler:$room_version"
 
 
     // ViewModel
@@ -88,5 +89,6 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:$arch_version"
 
     //Coroutines
+
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
 }
