--- a/RoomRecyclerView/app/build.gradle
+++ b/RoomRecyclerView/app/build.gradle
@@ -38,6 +38,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     //room
     def room_version = "2.4.1"
     //lifecycle
