--- a/myMVVM/app/build.gradle
+++ b/myMVVM/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
     id 'kotlin-kapt'
 }
 
@@ -36,13 +37,16 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def retrofit_version = "2.9.0"
-    def room_version = "2.3.0"
-    def lifecycle_version = "2.3.1"
+    def room_version = "2.4.2"
+    def lifecycle_version = "2.4.1"
     def arch_version = "2.1.0"
-    def coroutines_version = "1.5.0"
+    def coroutines_version = "1.6.0"
     def koin_version = "3.1.1"
     def picasso = "2.71828"
+
 
 
     implementation 'androidx.core:core-ktx:1.7.0'
