Added fun loadCoffeeToCard(for indication about number of products on BottomMenu icons) in MainActivity.kt.

--- a/Cofee/app/src/main/AndroidManifest.xml
+++ b/Cofee/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:theme="@style/Theme.Cofee"
         android:usesCleartextTraffic="true">
 
-        <activity
-            android:name=".presentation.MainActivity"
+        <activity android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
