--- a/Cofee/app/src/main/AndroidManifest.xml
+++ b/Cofee/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="my.project.cofee">
 
-<!--    <uses-permission android:name="android.permission.INTERNET"/>-->
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".presentation.App"
